test new layout

--- a/_includes/images/index.html
+++ b/_includes/images/index.html
@@ -215,7 +215,11 @@
 										<li>
 											<span class="opener">Tech blogs</span>
 											<ul>
-												<li><a href="#">Robotics</a></li>
+												<span class="opener">Tech blogs</span>
+												<ul>
+													<li><a href="embedded.html">Embedded linux</a></li>
+													<li><a href="embedded.html">Embedded linux</a></li>
+												</ul>
 												<li><a href="embedded.html">Embedded linux</a></li>
 												<li><a href="#">STM32 MCU</a></li>
 												<!--<li><a href="#">Feugiat Veroeros</a></li> -->
