--- a/_layouts/tech_menu.html
+++ b/_layouts/tech_menu.html
@@ -1,50 +1,97 @@
+<!DOCTYPE HTML>
+<!--
+	Editorial by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-
 	<head>
-		<title>{{site.title}}</title>
+		{% include base.html %}
+		<title>Jie-{{page.title}}</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="{{base}}/assets/css/main.css" />
 	</head>
-
-
 	<body class="is-preload">
 
 		<!-- Wrapper -->
-		<div id="wrapper">
-			
-			<div id="main">
-				<div class="inner">
+			<div id="wrapper">
+
+				<!-- Main -->
+					<div id="main">
+						<div class="inner">
+
+							<!-- Header -->
+								<header id="header">
+									<a href="index.html" class="logo"><strong>Follow Jietang</strong> with:</a>
+									<ul class="icons">
+										<li><a href="mailto:alvin.tang6@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+										
+										<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
+										<li><a href="https://github.com/Alvintang6" class="icon brands fa-github-square"><span class="label">Github</span></a></li>
+										<li><a href="https://www.instagram.com/tang12y/?hl=en" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.linkedin.com/in/jie-tang-55070b148/" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
+										<li><a href="{{base}}/resume_jietang.pdf" class="logo"><i class="fas fa-file-invoice"></i>CV</a></li>
+									</ul>
+								</header>
+
+							<!-- Content -->
+								<section>
+									<header class="main">
+										<h1>{{page.title}}</h1>
+									</header>
+
+									
+										{% if  page.topics  %}
+												{% for tag in site.tags %}
+												{% capture tag_name %}{{ tag | first }}{% endcapture %}
+												{% if page.topics == tag_name %}
+												{% for post2 in site.tags[tag_name] %}
+
+
+													<div class="box">
+														<a href="{{post2.url}}"><h2>{{post2.title}}</h2></a>
+														<p>Felis sagittis eget tempus primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Magna sed etiam ante ipsum primis in faucibus vestibulum.</p>
+														<a href="{{post2.url}}" class="button primary small">continue</a>
+
+													</div>
+
 	
-	
-				{% include header.html %}			
+												{% endfor %}
+												{% endif %}
+												{% endfor %}
+												<!--<li><a href="#">Feugiat Veroeros</a></li> -->
+										
+										{% endif %}
+										
+									{{content}}
+									
 
-				</div>
-			</div>
 
-
-
-
-	
-		
-		
-
-				{% include side_bar_topic.html %}
+								</section>
+								
+								
 
 								
-		</div>
 
+							</div>
+						</div>
+								
 
+								
+								
+								
 
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+				{%include side_bar_topic.html%}
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="{{base}}/assets/js/jquery.min.js"></script>
+			<script src="{{base}}/assets/js/browser.min.js"></script>
+			<script src="{{base}}/assets/js/breakpoints.min.js"></script>
+			<script src="{{base}}/assets/js/util.js"></script>
+			<script src="{{base}}/assets/js/main.js"></script>
+
 	</body>
-
-
-
-
 </html>
-
