add tag to website

--- a/_includes/base.html
+++ b/_includes/base.html
@@ -7,4 +7,6 @@
 {% elsif depth == 5 %}{% assign base = '../../../..' %}
 {% elsif depth == 6 %}{% assign base = '../../../../..' %}
 {% elsif depth == 7 %}{% assign base = '../../../../../..' %}
+{% elsif depth == 8 %}{% assign base = '../../../../../../..' %}
+
 {% endif %}
