--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 								<header id="header">
 									<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-									<a href="index.html" class="logo"><strong>Follow Jietang</strong> with:</a>
+									<a href="{{base}}/index.html" class="logo"><strong>Follow Jietang</strong> with:</a>
 									<ul class="icons">
 										<li><a href="mailto:alvin.tang6@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 										
