--- a/_includes/side_bar_home.html
+++ b/_includes/side_bar_home.html
@@ -16,7 +16,6 @@
 									</header>
 									<ul>
 										<li><a href="index.html">About me</a></li>
-										<li><a href="generic.html">Generic</a></li>
 										<li>
 											<span class="opener"> Tech blogs</span>
 											<ul>
@@ -41,7 +40,7 @@
 												<li><a href="#">Beijing</a></li>
 											</ul>
 										</li>
-										<li><a href="elements.html">Elements</a></li>
+										<li><a href="elements.html">All BLOGS</a></li>
 										
 									</ul>
 								</nav>
