--- a/_layouts/tech_post.html
+++ b/_layouts/tech_post.html
@@ -23,7 +23,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Follow Jietang</strong> with:</a>
+									<a href="{{base}}/index.html" class="logo"><strong>Follow Jietang</strong> with:</a>
 									<ul class="icons">
 										<li><a href="mailto:alvin.tang6@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 										
@@ -42,6 +42,9 @@
 									</header>
 
 									{{content}}
+
+
+
 									
 									{%include chat_bar.html%}
 
