finish tag system and tag page

--- a/_includes/chat_bar.html
+++ b/_includes/chat_bar.html
@@ -8,11 +8,11 @@
         el: '#vcomments',
         appId: '9CvJWlMvXQsUUkjcCF0nbtSS-MdYXbMMI',
         appKey: 'KQFufTHJeHucASskKMC6xtLG',
-        avatar: 'robohash',
+        avatar: 'retro',
         meta: ['nick', 'mail'],
         lang: 'en',
         visitor: true,
         enableQQ:true,
-        placeholder: 'Message here.\n (Tips: To make a anonymous comment, nickname and email are not necessary.\n Please entry nickname and email, if you want to show your nickname and get reply reminder by email. )\n(输入nickname和email，可显示网络名并得到邮件回复提醒。)'
+        placeholder: 'Message here.\n (Tips: To make a anonymous comment, nickname and email are not necessary.\n Please entry nickname and email, if you want to show your nickname and get reminder of reply by email. )\n(输入nickname和email，可显示网络名并得到邮件回复提醒。)'
     })
 </script>
