--- a/_includes/side_bar_home.html
+++ b/_includes/side_bar_home.html
@@ -43,9 +43,48 @@
 										<li><a href="elements.html">All BLOGS</a></li>
 										
 									</ul>
+									<br/>
+									<br/>
+
+									<div>
+									<h3><a href=" "><i class="fas fa-tags"></i>Tags</h3></a>
+									</div>
+									{% assign first = site.tags.first %}
+									{% assign max = first[1].size %}
+									{% assign min = max %}
+									{% for tag in site.tags offset:1 %}
+									  {% if tag[1].size > max %}
+									    {% assign max = tag[1].size %}
+									  {% elsif tag[1].size < min %}
+									    {% assign min = tag[1].size %}
+									  {% endif %}
+									{% endfor %}
+									{% assign diff = max | minus: min %}
+
+									{% for tag in site.tags %}
+									  {% assign temp = tag[1].size | minus: min | times: 36 | divided_by: diff %}
+									  {% assign basein = temp | divided_by: 4 %}
+									  {% assign remain = temp | modulo: 4 %}
+									  {% if remain == 0 %}
+									    {% assign size = basein | plus: 9 %}
+									  {% elsif remain == 1 or remain == 2 %}
+									    {% assign size = basein | plus: 9 | append: '.5' %}
+									  {% else %}
+									    {% assign size = basein | plus: 10 %}
+									  {% endif %}
+									  {% if remain == 0 or remain == 1 %}
+									    {% assign color = 9 | minus: basein %}
+									  {% else %}
+									    {% assign color = 8 | minus: basein %}
+									  {% endif %}
+
+									  <a href=" {{base}}/tag/{{tag[0] | downcase }}/index.html" style="font-size: {{ size }}pt; color: #{{ color }}{{ color }}{{ color }};">{{ tag[0] }}</a>
+									{% endfor %}
 								</nav>
 
-							
+								
+										
+
 
 								<section>
 									<header class="major">
