--- a/_includes/side_bar_topic.html
+++ b/_includes/side_bar_topic.html
@@ -92,7 +92,7 @@
 									    {% assign color = 8 | minus: basein %}
 									  {% endif %}
 
-									  <a href=" " style="font-size: {{ size }}pt; color: #{{ color }}{{ color }}{{ color }};">{{ tag[0] }}</a>
+									  <a href=" {{base}}/tag/{{tag[0] | downcase }}/index.html" style="font-size: {{ size }}pt; color: #{{ color }}{{ color }}{{ color }};">{{ tag[0] }}</a>
 									{% endfor %}
 									
 
