--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -1,13 +1,98 @@
----
-layout: default
----
-<h2>{{ page.tag }}</h2>
-<ul>
-{% for post in page.posts %}
-  <li><a href="{{ post.url }}">{{ post.title }}</a> ({{ post.date | date_to_string }} | Tags: {{ post | tags }})</li>
-{% endfor %}
-</ul>
+<!DOCTYPE HTML>
+<!--
+	Editorial by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		{% include base.html %}
+		<title>{{page.title}}</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="{{base}}/assets/css/main.css" />
+	</head>
+	<body class="is-preload">
 
-<div id="tag-cloud">
-  {{ site | tag_cloud }}
-</div>
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Main -->
+					<div id="main">
+						<div class="inner">
+
+							<!-- Header -->
+								<header id="header">
+									<a href="{{base}}/index.html" class="logo"><strong>Follow Jietang</strong> with:</a>
+									<ul class="icons">
+										<li><a href="mailto:alvin.tang6@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+										
+										<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
+										<li><a href="https://github.com/Alvintang6" class="icon brands fa-github-square"><span class="label">Github</span></a></li>
+										<li><a href="https://www.instagram.com/tang12y/?hl=en" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.linkedin.com/in/jie-tang-55070b148/" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
+										<li><a href="{{base}}/resume_jietang.pdf" class="logo"><i class="fas fa-file-invoice"></i>CV</a></li>
+									</ul>
+								</header>
+
+							<!-- Content -->
+								<section>
+									<h3><a href=" "><i class="fas fa-tags"></i>Tags</h3></a>
+
+
+									{% for tag in site.tags %}
+									
+									<a href=" {{base}}/tag/{{tag[0] | downcase }}/index.html" class="button">{{ tag[0] }}<sup>{{ tag[1].size }}</sup></a>
+									
+
+									{% endfor %}
+									<p></p>
+
+									<h1>{{ page.tag }}</h1>
+
+									
+									<ul>
+									{% for post in page.posts %}
+									<div class="box">
+  									<li><a href="{{ post.url }}">{{ post.title }}</a> ({{ post.date | date_to_string }} | Tags: {{ post | tags }})</li>
+  									</div>
+									{% endfor %}
+									</ul>
+									
+								
+
+								</section>
+								
+								
+
+								
+
+							</div>
+						</div>
+								
+
+								
+								
+								
+
+				{%include side_bar_topic.html%}
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="{{base}}/assets/js/jquery.min.js"></script>
+			<script src="{{base}}/assets/js/browser.min.js"></script>
+			<script src="{{base}}/assets/js/breakpoints.min.js"></script>
+			<script src="{{base}}/assets/js/util.js"></script>
+			<script src="{{base}}/assets/js/main.js"></script>
+
+	</body>
+</html>
+
+
+
+
+
+
+
+
