--- a/_layouts/tech_menu.html
+++ b/_layouts/tech_menu.html
@@ -55,7 +55,7 @@
 														<a href="{{post2.url}}"><h2>{{post2.title}}</h2></a>
 														<p>{{post2.description}}</p>
 														
-												<p style="float:left">{{post2.date}}</p> <p style="float:right"><a href="{{post2.url}}" class="button primary small">continue</a></p><br/>
+												<p style="float:left">{{post2.date | date_to_string }}</p><p style="float:right"><a href="{{post2.url}}" class="button primary small">continue</a></p><br/>
 
 													</div>
 
