--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -42,7 +42,7 @@
 
 									{% for tag in site.tags %}
 									
-									<a href=" {{base}}/tag/{{tag[0] | downcase }}/index.html" class="button">{{ tag[0] }}<sup>{{ tag[1].size }}</sup></a>
+									<a href=" ./{{base}}/tag/{{tag[0] | downcase }}/index.html" class="button">{{ tag[0] }}<sup>{{ tag[1].size }}</sup></a>
 									
 
 									{% endfor %}
