--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -37,12 +37,12 @@
 
 							<!-- Content -->
 								<section>
-									<h3><a href=" "><i class="fas fa-tags"></i>Tags</h3></a>
+									<h3><a href=" "><i class="fas fa-tags"></i>All Tags</h3></a>
 
 
 									{% for tag in site.tags %}
 									
-									<a href=" ./{{base}}/tag/{{tag[0] | downcase }}/index.html" class="button">{{ tag[0] }}<sup>{{ tag[1].size }}</sup></a>
+									<a href=" {{base}}/tag/{{tag[0] | downcase }}/index.html" class="button">{{ tag[0] }}<sup>{{ tag[1].size }}</sup></a>
 									
 
 									{% endfor %}
