finish theme building

--- a/_includes/side_bar_home.html
+++ b/_includes/side_bar_home.html
@@ -33,14 +33,12 @@
 										<li>
 											<span class="opener">Photograph</span>
 											<ul>
-												<li><a href="#">Windsor</a></li>
-												<li><a href="#">Toronto</a></li>
-												<li><a href="#">Ontario</a></li>
-												<li><a href="#">Amercia</a></li>
-												<li><a href="#">Beijing</a></li>
+												{% for photo in site.photos %}
+												<li><a href="{{base}}/photos/{{ photo['name'] }}/index.html">{{ photo['name'] }}</a></li>
+												{% endfor %}
 											</ul>
 										</li>
-										<li><a href="elements.html">All BLOGS</a></li>
+										<li><a href="{{base}}/all_blog.html">All BLOGS</a></li>
 										
 									</ul>
 									<br/>
