--- a/_layouts/all_blog.html
+++ b/_layouts/all_blog.html
@@ -46,10 +46,10 @@
 
 
 									
-										{% if  page.topics  %}
+										
 												
 												{% for post2 in site.posts %}	
-												{% if page.topics == post2.catelogue %}
+												{% if post2.catelogue  %}
 
 
 													<div class="box">
@@ -65,7 +65,7 @@
 												{% endfor %}
 												<!--<li><a href="#">Feugiat Veroeros</a></li> -->
 										
-										{% endif %}
+										
 										
 							
 									
