--- a/_layouts/gallery_page.html
+++ b/_layouts/gallery_page.html
@@ -1,6 +1,103 @@
----
-layout: page
----
+<!DOCTYPE HTML>
+<!--
+  Editorial by HTML5 UP
+  html5up.net | @ajlkn
+  Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+  <head>
+    {% include base.html %}
+    <title>Jie-{{page.title}}</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="{{base}}/assets/css/main.css" />
+  </head>
+  <body class="is-preload">
+
+    <!-- Wrapper -->
+      <div id="wrapper">
+
+        <!-- Main -->
+          <div id="main">
+            <div class="inner">
+
+              <!-- Header -->
+                <header id="header">
+                  <a href="{{base}}/index.html" class="logo"><strong>Follow Jietang</strong> with:</a>
+                  <ul class="icons">
+                    <li><a href="mailto:alvin.tang6@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+                    
+                    <!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
+                    <li><a href="https://github.com/Alvintang6" class="icon brands fa-github-square"><span class="label">Github</span></a></li>
+                    <li><a href="https://www.instagram.com/tang12y/?hl=en" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                    <li><a href="https://www.linkedin.com/in/jie-tang-55070b148/" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
+                    <li><a href="{{base}}/resume_jietang.pdf" class="logo"><i class="fas fa-file-invoice"></i>CV</a></li>
+                  </ul>
+                </header>
+
+              <!-- Content -->
+                <section>
+
+
+                  <h1><a href="/{{ site.gallery.dir }}">{{ page.title }}</a></h1>
+                  <hr />
+                  
+                      <div class="posts">
+                        {% for image in page.images %}
+                        <article>
+                          <a name="{{ image.name }}/index.html"></a>
+                          <a href="{{ image.name }}" class="image">
+                              <img src="thumbs/{{ image.name }}" alt="" />
+                          </a>
+                          {% assign photo_theme = page.title | split: ":" %}
+                          {% assign photo = photo_theme.last | append: "1" %}
+                          {% assign photo_id = image.name | split: "." %} 
+                          {% assign photo_name = photo_id.first %}
+                          {% assign photo_dis = site.data.Windsor[photo_name].description%} 
+                          <p>{{photo}}</p>
+                          <p> {{photo_dis }} </p>
+                        </article>
+                        {% endfor %}
+                      </div>
+                  
+
+
+                  
+                
+                  
+
+
+                </section>
+                
+                
+
+                
+
+              </div>
+            </div>
+                
+
+                
+                
+                
+
+        {%include side_bar_topic.html%}
+
+      </div>
+
+    <!-- Scripts -->
+      <script src="{{base}}/assets/js/jquery.min.js"></script>
+      <script src="{{base}}/assets/js/browser.min.js"></script>
+      <script src="{{base}}/assets/js/breakpoints.min.js"></script>
+      <script src="{{base}}/assets/js/util.js"></script>
+      <script src="{{base}}/assets/js/main.js"></script>
+
+  </body>
+</html>
+
+
+
+
 <style TYPE="text/css">
 .gallery-image-wrapper {
   height: 300px;
@@ -18,13 +115,3 @@ layout: page
   max-width: 100%;
 }
 </style>
-<h1><a href="/{{ site.gallery.dir }}">{{ page.title }}</a></h1>
-<hr />
-{% for image in page.images %}
-    <div class="gallery-image-wrapper">
-        <a name="{{ image.name }}"></a>
-        <a href="{{ image.name }}"{% if site.gallery.lightbox %} rel="lightbox[{{ page.gallery }}]"{% endif %}>
-            <img class="gallery-image" src="thumbs/{{ image.name }}" />
-        </a>
-    </div>
-{% endfor %}
