--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -53,13 +53,12 @@
 									</header>
 									<div class="posts">
 
-										{% for gallery in page.galleries %}
+										{% for gallery in site.photos %}
 										
 
 										<article>
 											<h3>{{ gallery.name |  markdownify }}</h3>
-											<a href="photos/{{ gallery['name'] }}/index.html" class="image"><img src=" photos/{{ gallery['name'] }}/{{ gallery['best_image'] }} " alt="" /></a>
-											<h3>{{ gallery['name'] }}</h3>
+											<a href="photos/{{ gallery['name'] }}/index.html" class="image"><img src=" photos/{{ gallery['name'] }}/thumbs/{{ gallery['best_image'] }} " alt="" /></a>
 											<p>{{ gallery['description'] }} </p>
 											<ul class="actions">
 												<li><a href="photos/{{ gallery['name'] }}/index.html" class="button">More</a></li>
