add toronto photos and linux driver blog

--- a/_includes/side_bar_topic.html
+++ b/_includes/side_bar_topic.html
@@ -46,7 +46,7 @@
 											<ul>
 												{% for post2 in site.posts %}
 												
-												{% if menu_topic.topics == post2.catelogue %}										
+												{% if menu_topic.topics == post2.catalogue %}										
 
 												<li><a href="{{post2.url}}">{{post2.title}}</a></li>
 								
