--- a/_layouts/all_blog.html
+++ b/_layouts/all_blog.html
@@ -49,7 +49,7 @@
 										
 												
 												{% for post2 in site.posts %}	
-												{% if post2.catelogue  %}
+												{% if post2.catalogue  %}
 
 
 													<div class="box">
