--- a/_layouts/tech_menu.html
+++ b/_layouts/tech_menu.html
@@ -49,7 +49,7 @@
 										{% if  page.topics  %}
 												
 												{% for post2 in site.posts %}	
-												{% if page.topics == post2.catelogue %}
+												{% if page.topics == post2.catalogue %}
 
 
 													<div class="box">
