--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,14 @@
+								  <script type="text/x-mathjax-config">
+								    MathJax.Hub.Config({
+								      tex2jax: {
+								        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+								        inlineMath: [['$','$']]
+								      }
+								    });
+								  </script>
+								  <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
+
+
 								<header id="header">
 									<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 									<a href="{{base}}/index.html" class="logo"><strong>Follow Jietang</strong> with:</a>
