--- a/_layouts/tech_post.html
+++ b/_layouts/tech_post.html
@@ -23,18 +23,8 @@
 						<div class="inner">
 
 							<!-- Header -->
-								<header id="header">
-									<a href="{{base}}/index.html" class="logo"><strong>Follow Jietang</strong> with:</a>
-									<ul class="icons">
-										<li><a href="mailto:alvin.tang6@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-										
-										<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li> -->
-										<li><a href="https://github.com/Alvintang6" class="icon brands fa-github-square"><span class="label">Github</span></a></li>
-										<li><a href="https://www.instagram.com/tang12y/?hl=en" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.linkedin.com/in/jie-tang-55070b148/" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
-										<li><a href="{{base}}/resume_jietang.pdf" class="logo"><i class="fas fa-file-invoice"></i>CV</a></li>
-									</ul>
-								</header>
+								{% include header.html %}
+								
 
 							<!-- Content -->
 								<section>
